--- a/portal/ui/templates/practices/delegates/index.html
+++ b/portal/ui/templates/practices/delegates/index.html
@@ -83,7 +83,7 @@
 {{ formhelper.render_pagination(
   delegates,
   'ui.delegates_index',
-  search=searchForm.search.data,
+  searchForm,
   code=practice.code
   ) }}
 
