--- a/portal/ui/templates/practices/index.html
+++ b/portal/ui/templates/practices/index.html
@@ -24,11 +24,11 @@
                 </div>
 
                 <div class="col-5">
-                  {% if p.status_id == 0 %}
+                  {% if p.status_id in ('0', 0) %}
                     {% set status_class="badge-warning" %}
-                  {% elif p.status_id == 1 %}
+                  {% elif p.status_id == '1' %}
                     {% set status_class="badge-success" %}
-                  {% elif p.status_id == 2 %}
+                  {% elif p.status_id == '2' %}
                     {% set status_class="badge-danger" %}
                   {% endif %}
 
@@ -112,7 +112,7 @@
 
     {% endif %}
 
-    {{ formhelper.render_pagination(practices, 'ui.practices_index', search=searchForm.search.data) }}
+    {{ formhelper.render_pagination(practices, 'ui.practices_index', searchForm) }}
 
   </section>
 
