Remove processed by columns - didnt work anyway!

--- a/portal/ui/templates/practices/recruits/index.html
+++ b/portal/ui/templates/practices/recruits/index.html
@@ -31,7 +31,7 @@
           {% endif %}
           
         </h1>
-        <h2>Recruited on {{ r.recruited_date | date_format }} and processed on {{ r.processed_date | date_format }}</h2>
+        <h2>Recruited on {{ r.recruited_date | date_format }}</h2>
       </header>
 
       <dl>
